# app-services-sdk-python

./: .openapi-generator-ignore  CONTRIBUTING.md  Makefile  README.md  config.yaml  pyproject.toml
.errors/: index.js
.github/workflows/: build.yaml  generate_clients.yaml  release.yaml  update_openapi.yaml
auth/: constants.py  rhoas_auth.py
connector_management_sdk/apiv1/client/: tox.ini
docs/: README.md
examples/: README.md
examples/auth/: auth_client_create_kafka.py  auth_client_get_kafkas.py
examples/kafka_mgmt/: get_kafkas_example.py
kafka_mgmt/apiv1/client/: .gitlab-ci.yml  README.md  setup.py  tox.ini
kafka_mgmt_sdk/apiv1/client/: README.md  setup.py  tox.ini
openapi/: kafka-admin-rest.yaml
registry_instance_sdk/apiv1/client/: README.md
registry_management_sdk/apiv1/client/: tox.ini
scripts/: README.md  fetch_apis.sh  generate.sh  publish.sh
scripts/errors/: generate-errors.js
scripts/templates/: README.mustache  rest.mustache
sdks/connector_mgmt_sdk/: README.md  errors.py  setup.py  tox.ini
sdks/connector_mgmt_sdk/.openapi-generator/: FILES
sdks/connector_mgmt_sdk/dimakis_test_connector_mgmt_sdk/: __init__.py  api_client.py  configuration.py  model_utils.py  rest.py
sdks/connector_mgmt_sdk/docs/: Channel.md  ConnectorClusterListAllOf.md  ConnectorClusterMeta.md  ConnectorClusterState.md  ConnectorClusterStatus.md  ConnectorClustersApi.md  ConnectorDesiredState.md  ConnectorNamespace.md  ConnectorNamespaceEvalRequest.md  ConnectorNamespaceMeta.md  ConnectorNamespacePatchRequest.md  ConnectorNamespaceQuota.md  ConnectorNamespaceRequest.md  ConnectorNamespaceStatus.md  ConnectorNamespacesApi.md  ConnectorServiceApi.md  ConnectorStatusStatus.md  ConnectorType.md  ConnectorTypeAllOf.md  ConnectorTypeLabelCount.md  ConnectorTypeLabelCountList.md  ConnectorTypesApi.md  ConnectorsApi.md  KafkaConnectionSettings.md  List.md  MemoryQuota.md  ObjectMeta.md  ObjectReference.md  VersionMetadata.md
sdks/connector_mgmt_sdk/rhoas_connector_mgmt_sdk/: __init__.py  api_client.py  configuration.py  model_utils.py  rest.py
sdks/connector_mgmt_sdk/test/: test_addon_parameter.py  test_addon_parameter_list.py  test_channel.py  test_connector.py  test_connector_cluster.py  test_connector_cluster_list.py  test_connector_cluster_list_all_of.py  test_connector_cluster_meta.py  test_connector_cluster_request.py  test_connector_cluster_request_meta.py  test_connector_cluster_state.py  test_connector_cluster_status.py  test_connector_cluster_status_status.py  test_connector_clusters_api.py  test_connector_configuration.py  test_connector_desired_state.py  (+47 more)
sdks/kafka_instance_sdk/: README.md  errors.py  tox.ini
sdks/kafka_mgmt_sdk/: README.md  errors.py  setup.py  tox.ini
sdks/registry_instance_sdk/: README.md  setup.py  tox.ini
sdks/registry_mgmt_sdk/: README.md  errors.py  setup.py  tox.ini
sdks/service_accounts_mgmt_sdk/: README.md  tox.ini
sdks/smart_events_mgmt_sdk/: README.md  setup.py  tox.ini
(+2325 files in other folders)
