[tool.poetry]
name = "dimakis_rhoas_sdks"
version = "0.1.0"
description = "A package which includes RHOAS SDKs"
authors = ["dimakis <dsaridak@redhat.com>"]
license = "Apache License"
readme = "README.md"
packages = [
    { include = "dimakis_test_connector_mgmt_sdk", from = "sdks/connector_mgmt_sdk/" },
    { include = "dimakis_test_kafka_instance_sdk", from = "sdks/kafka_instance_sdk/"},
    { include = "dimakis_test_service_registry_mgmt_sdk", from = "sdks/registry_mgmt_sdk/"},
    { include = "dimakis_test_kafka_mgmt_sdk", from = "sdks/kafka_mgmt_sdk/"},
    { include = "dimakis_test_registry_instance_sdk", from = "sdks/registry_instance_sdk/"},
    { include = "dimakis_test_smart_events_mgmt_sdk", from = "sdks/smart_events_mgmt_sdk/"},
]

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = "1.25.3"
python-dateutil = "*"

[tool.poetry.dev-dependencies]
poetry = "^1.0"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
