[tool.poetry]
name = "rhoas_sdks"
version = "0.1.0"
description = "A package which includes RHOAS SDKs"
authors = ["dimakis <dsaridak@redhat.com>"]
license = "Apache License"
readme = "README.md"
packages = [
    { include = "rhoas_connector_mgmt_sdk", from = "sdks/connector_mgmt_sdk/" },
    { include = "rhoas_kafka_instance_sdk", from = "sdks/kafka_instance_sdk/"},
    { include = "rhoas_service_registry_mgmt_sdk", from = "sdks/registry_mgmt_sdk/"},
    { include = "rhoas_kafka_mgmt_sdk", from = "sdks/kafka_mgmt_sdk/"},
    { include = "rhoas_registry_instance_sdk", from = "sdks/registry_instance_sdk/"},
    { include = "rhoas_smart_events_mgmt_sdk", from = "sdks/smart_events_mgmt_sdk/"},
    { include = "rhoas_service_accounts_mgmt_sdk", from = "sdks/service_accounts_mgmt_sdk" },
    { include = "auth"}
]

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = "^1.25.3"
python-dateutil = "*"
python-keycloak = "^2.5.0"

[tool.poetry.dev-dependencies]
poetry = "^1.0"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
